--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tinkerpop",
     "blueprints"
   ],
-  "homepage": "https://github.com/jimlloyd/gremlin-v3",
+  "homepage": "https://github.com/RedSeal-co/gremlin-v3",
   "license": "MIT",
   "authors": [
     {
@@ -37,7 +37,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jimlloyd/gremlin-v3.git"
+    "url": "https://github.com/RedSeal-co/gremlin-v3.git"
   },
   "main": "lib/gremlin.js",
   "readmeFilename": "README.md",
