Use experimental node-java with varargs support.
This changes the package.json to install java from an experimental branch of node-java,
which has support for varargs. This new feature is not fully backwards compatible,
but it turns out the impact on gremlin-v3 is isolated to one change in vertex-wrapper.js.

[Finishes #90828154]

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "debug": "^2.1.1",
     "glob": "~4.3.5",
-    "java": ">=0.4.6",
+    "java": "git://github.com/RedSeal-co/node-java.git#varargs.r3",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^3.2.0",
     "q": "^1.1.2"
